mongo.yaml
--- #MongoDB deployment
# The blueprint of our MongoDB deplyment in k8s using the secrets

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    db: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
--- #MongoDB service
#The blueprint of our MongoDB internal service in k8s cluster which will allow the requests exchange between the pods

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    db: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
